--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <!-- Google Tag Manager
+        <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-WBMP2D8');</script>
-        End Google Tag Manager -->
-        <!-- Hotjar Tracking Code for https://autoplanar.com
+        })(window,document,'script','dataLayer','GTM-MVGMH67');</script>
+        <!-- End Google Tag Manager -->
+        <!-- Hotjar Tracking Code for https://openmagnetics.com -->
         <script>
             (function(h,o,t,j,a,r){
                 h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-                h._hjSettings={hjid:2833092,hjsv:6};
+                h._hjSettings={hjid:3142861,hjsv:6};
                 a=o.getElementsByTagName('head')[0];
                 r=o.createElement('script');r.async=1;
                 r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
                 a.appendChild(r);
             })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-        </script> -->
+        </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" type="text/css" href="/static/styles/css/custom.css">
@@ -31,10 +31,10 @@
     </head>
 
     <body>
-        <!-- Google Tag Manager (noscript)
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WBMP2D8"
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MVGMH67"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-        End Google Tag Manager (noscript) -->
+        <!-- End Google Tag Manager (noscript) -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-secondary text-primary mb-2", id="header_wrapper">
             <a href="/index">
                 <img src="/static/images/logo.png" width="40" height="auto" href="/index" class="d-inline-block align-top mr-2" alt="">
