--- a/app/static/styles/scss/custom.scss
+++ b/app/static/styles/scss/custom.scss
@@ -1,7 +1,7 @@
 $primary:       #ff1e00 !default;
 $danger:        #290500 !default;
 $secondary:     #1d1313 !default;
-$light:     	#1d1313 !default;
+$light:     	#718191 !default;
 $white:     	#F5F0F6 !default;
 $dark:     		#000000 !default;
 $success: 		#61A888 !default;
