--- a/app/static/styles/css/custom.css
+++ b/app/static/styles/css/custom.css
@@ -24,7 +24,7 @@
   --info: #17a2b8;
   --warning: #ffc107;
   --danger: #290500;
-  --light: #1d1313;
+  --light: #718191;
   --dark: #000000;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
@@ -1467,18 +1467,18 @@ pre {
 .table-light,
 .table-light > th,
 .table-light > td {
-  background-color: #b9b2b6; }
+  background-color: #d0d1da; }
 .table-light th,
 .table-light td,
 .table-light thead th,
 .table-light tbody + tbody {
-  border-color: #857d80; }
+  border-color: #b0b6c1; }
 
 .table-hover .table-light:hover {
-  background-color: #ada5a9; }
+  background-color: #c2c3cf; }
   .table-hover .table-light:hover > td,
   .table-hover .table-light:hover > th {
-    background-color: #ada5a9; }
+    background-color: #c2c3cf; }
 
 .table-dark,
 .table-dark > th,
@@ -2094,27 +2094,27 @@ fieldset:disabled a.btn {
 
 .btn-light {
   color: #F5F0F6;
-  background-color: #1d1313;
-  border-color: #1d1313; }
+  background-color: #718191;
+  border-color: #718191; }
   .btn-light:hover {
     color: #F5F0F6;
-    background-color: #060404;
-    border-color: black; }
+    background-color: #606e7c;
+    border-color: #5a6875; }
   .btn-light:focus, .btn-light.focus {
     color: #F5F0F6;
-    background-color: #060404;
-    border-color: black;
-    box-shadow: 0 0 0 0.2rem rgba(61, 52, 53, 0.5); }
+    background-color: #606e7c;
+    border-color: #5a6875;
+    box-shadow: 0 0 0 0.2rem rgba(133, 146, 160, 0.5); }
   .btn-light.disabled, .btn-light:disabled {
     color: #F5F0F6;
-    background-color: #1d1313;
-    border-color: #1d1313; }
+    background-color: #718191;
+    border-color: #718191; }
   .btn-light:not(:disabled):not(.disabled):active, .btn-light:not(:disabled):not(.disabled).active, .show > .btn-light.dropdown-toggle {
     color: #F5F0F6;
-    background-color: black;
-    border-color: black; }
+    background-color: #5a6875;
+    border-color: #55616d; }
     .btn-light:not(:disabled):not(.disabled):active:focus, .btn-light:not(:disabled):not(.disabled).active:focus, .show > .btn-light.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(61, 52, 53, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(133, 146, 160, 0.5); }
 
 .btn-dark {
   color: #F5F0F6;
@@ -2255,23 +2255,23 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(41, 5, 0, 0.5); }
 
 .btn-outline-light {
-  color: #1d1313;
-  border-color: #1d1313; }
+  color: #718191;
+  border-color: #718191; }
   .btn-outline-light:hover {
     color: #F5F0F6;
-    background-color: #1d1313;
-    border-color: #1d1313; }
+    background-color: #718191;
+    border-color: #718191; }
   .btn-outline-light:focus, .btn-outline-light.focus {
-    box-shadow: 0 0 0 0.2rem rgba(29, 19, 19, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(113, 129, 145, 0.5); }
   .btn-outline-light.disabled, .btn-outline-light:disabled {
-    color: #1d1313;
+    color: #718191;
     background-color: transparent; }
   .btn-outline-light:not(:disabled):not(.disabled):active, .btn-outline-light:not(:disabled):not(.disabled).active, .show > .btn-outline-light.dropdown-toggle {
     color: #F5F0F6;
-    background-color: #1d1313;
-    border-color: #1d1313; }
+    background-color: #718191;
+    border-color: #718191; }
     .btn-outline-light:not(:disabled):not(.disabled):active:focus, .btn-outline-light:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-light.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(29, 19, 19, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(113, 129, 145, 0.5); }
 
 .btn-outline-dark {
   color: #000000;
@@ -3790,13 +3790,13 @@ input[type="button"].btn-block {
 
 .badge-light {
   color: #F5F0F6;
-  background-color: #1d1313; }
+  background-color: #718191; }
   a.badge-light:hover, a.badge-light:focus {
     color: #F5F0F6;
-    background-color: black; }
+    background-color: #5a6875; }
   a.badge-light:focus, a.badge-light.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(29, 19, 19, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(113, 129, 145, 0.5); }
 
 .badge-dark {
   color: #F5F0F6;
@@ -3900,13 +3900,13 @@ input[type="button"].btn-block {
     color: black; }
 
 .alert-light {
-  color: #0f0a0a;
-  background-color: #cac4c9;
-  border-color: #b9b2b6; }
+  color: #3b434b;
+  background-color: #dbdae2;
+  border-color: #d0d1da; }
   .alert-light hr {
-    border-top-color: #ada5a9; }
+    border-top-color: #c2c3cf; }
   .alert-light .alert-link {
-    color: black; }
+    color: #252a2e; }
 
 .alert-dark {
   color: black;
@@ -4168,15 +4168,15 @@ input[type="button"].btn-block {
     border-color: #150300; }
 
 .list-group-item-light {
-  color: #0f0a0a;
-  background-color: #b9b2b6; }
+  color: #3b434b;
+  background-color: #d0d1da; }
   .list-group-item-light.list-group-item-action:hover, .list-group-item-light.list-group-item-action:focus {
-    color: #0f0a0a;
-    background-color: #ada5a9; }
+    color: #3b434b;
+    background-color: #c2c3cf; }
   .list-group-item-light.list-group-item-action.active {
     color: #F5F0F6;
-    background-color: #0f0a0a;
-    border-color: #0f0a0a; }
+    background-color: #3b434b;
+    border-color: #3b434b; }
 
 .list-group-item-dark {
   color: black;
@@ -4859,12 +4859,12 @@ button.bg-danger:focus {
   background-color: black !important; }
 
 .bg-light {
-  background-color: #1d1313 !important; }
+  background-color: #718191 !important; }
 
 a.bg-light:hover, a.bg-light:focus,
 button.bg-light:hover,
 button.bg-light:focus {
-  background-color: black !important; }
+  background-color: #5a6875 !important; }
 
 .bg-dark {
   background-color: #000000 !important; }
@@ -4929,7 +4929,7 @@ button.bg-dark:focus {
   border-color: #290500 !important; }
 
 .border-light {
-  border-color: #1d1313 !important; }
+  border-color: #718191 !important; }
 
 .border-dark {
   border-color: #000000 !important; }
@@ -7706,10 +7706,10 @@ a.text-danger:hover, a.text-danger:focus {
   color: black !important; }
 
 .text-light {
-  color: #1d1313 !important; }
+  color: #718191 !important; }
 
 a.text-light:hover, a.text-light:focus {
-  color: black !important; }
+  color: #4f5b66 !important; }
 
 .text-dark {
   color: #000000 !important; }
