--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -46,9 +46,9 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
+<!--                     <li class="nav-item">
                         <a class="nav-link text-primary" href="/musings">Alf's Musings</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <ul class="navbar-nav user_section">
                 </ul>
