Change link name to articles

--- a/app/templates/musings.html
+++ b/app/templates/musings.html
@@ -29,7 +29,7 @@
                             </h3>
                             <div class="mb-1 text-muted">Dec 2021</div>
                             <p class="card-text mb-auto">First instance of the series based on analyzing Dowell's work on winding losses.</p>
-                            <a href="/musings1">Continue reading</a>
+                            <a href="/musings1">Read it!</a>
                         </div>
                         <img class="card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 200px; height: 200px;" src="/static/images/musings/1/image3.png">
                     </div>
@@ -43,7 +43,7 @@
                             </h3>
                             <div class="mb-1 text-muted">Dec 2021</div>
                             <p class="card-text mb-auto">Second instance of the series based on analyzing Dowell's work on winding losses.</p>
-                            <a href="/musings2">Continue reading</a>
+                            <a href="/musings2">Read it!</a>
                         </div>
                         <img class="card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 200px; height: 150px;" src="/static/images/musings/2/image3.png">
                     </div>
@@ -60,7 +60,7 @@
                             </h3>
                             <div class="mb-1 text-muted">Dec 2021</div>
                             <p class="card-text mb-auto">Third and last instance of the series based on analyzing Dowell's work on winding losses.</p>
-                            <a href="/musings3">Continue reading</a>
+                            <a href="/musings3">Read it!</a>
                         </div>
                         <img class="card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 200px; height: 150px;" src="/static/images/musings/3/image1.png">
                     </div>
@@ -74,7 +74,7 @@
                             </h3>
                             <div class="mb-1 text-muted">Jul 2022</div>
                             <p class="card-text mb-auto">First chapter of Magnetics for dummies, where we define what a Magnetic is.</p>
-                            <a href="/musings5">Continue reading</a>
+                            <a href="/musings5">Read it!</a>
                         </div>
                         <img class="card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 200px; height: 150px;" src="/static/images/musings/5/image5.png">
                     </div>
