Added new article

--- a/app/templates/musings.html
+++ b/app/templates/musings.html
@@ -11,7 +11,7 @@
                         <strong class="d-inline-block mb-2 text-success">Core losses</strong>
                         <h1 class="display-4">Alf's Musings 4</h1>
                         <p class="lead my-3">Roshen’s Models Offer An Advanced Approach To Modeling Core Losses.</p>
-                        <p class="lead mb-0"><a href="http://www.how2power.com/newsletters/index.php" class="text-white font-weight-bold">Coming soon on How2Power.com September 2022...</a></p>
+                        <p class="lead mb-0"><a href="http://www.how2power.com/pdf_view.php?url=/newsletters/2209/H2PowerToday2209_FocusOnMagnetics.pdf">Read it!</a></p>
                     </div>
                     <div class="col-md-6">
                     <img class=" ml-2 card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 500px;" src="/static/images/musings/4/loops.gif">
