--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,7 +16,7 @@
                     <i class="fa-solid fa-user-ninja fa-9x bd-placeholder-img rounded-circle text-primary" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" focusable="false"><title>Ninja</title></i>
 
                     <p class="text-white my-5">We are in stealth mode, but if you cannot restrain your curiosity, you can contact us at</p>
-                    <h2 class="lead text-white"><a href="mailto:openmagnetics@protonmail.com" class="text-success">openmagnetics@protonmail.com</a> </h2>
+                    <h2 class="lead"><a href="mailto:openmagnetics@protonmail.com" class="text-primary">openmagnetics@protonmail.com</a> </h2>
                 </div>
                 <div class="col-lg-1">
                 </div>
