--- a/app/templates/musings/musings2.html
+++ b/app/templates/musings/musings2.html
@@ -7,18 +7,18 @@
         <div class="container" >
             <div class="row justify-content-center">
                 <div class="col-md-9 ">
-                    <h1 class="text-light">Alf’s Musings #2</h1>
+                    <h1 class="text-white">Alf’s Musings #2</h1>
                     <div class="user d-flex align-items-start justify-content-between bg-secondary p-4 rounded">
                         <div class="d-flex align-items-start">
                             <img src="./img/kajal.png" class="img-fluid rounded-circle" alt="">
                             <div class="d-block">
-                                <span class="d-block text-light">by <a class="h6" >Alfonso Martínez</a></span>
+                                <span class="d-block text-white">by <a class="h6" >Alfonso Martínez</a></span>
                                 <span class="d-block text-muted">15th Dec 2021</span>
                             </div>
                         </div>
                     </div>
                     <!--//blog section-->
-                    <div class="blog-section text-light">
+                    <div class="blog-section text-white">
                         <h1 class="h2">Alf’s errata</h1>
                         <p>In the previous part of this Musing, especially in the last paragraph, it was stated that the first part of Dowell’s paper was focused on finding the leakage inductance and resistance of a magnetic with any number of windings. That was <a href="https://culturacientifica.com/app/uploads/2017/05/Errare-humanum-est.gif">erred</a>. Dowell’s explanation is done for any number and combination of layers, which can have equal or different currents, belonging to the same or different windings.</p>
                         <p>The second part though, where he developed his famous equations is, nevertheless, focussed on windings, or more concretely in all the layers of an individual and concrete winding, as does its equations; which maintains the affirmation of their being incorrect.</p>
@@ -71,7 +71,7 @@
                             </ul>
                         </ul>
                         <img src="/static/images/musings/1/image1.png" class="img-fluid bounce-little my-3" alt="">
-                        <p class="p">Sadly originally published in https://drmolina.substack.com/p/5-mergence-transformer-best-f1-championship</p>
+                        <p class="p">Regretfully originally published in https://drmolina.substack.com/p/5-mergence-transformer-best-f1-championship</p>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,8 @@
 
         <!-- FOOTER -->
         <footer class="container navbar fixed-bottom">
-            <p class="float-right"><a href="#">Back to top</a></p>
+            <p class="float-left"><a href="#">Back to top</a></p>
+            <p class="float-right"><a href="/musings">Back to menu</a></p>
         </footer>
     </main>
 {% endblock %}
