--- a/app/templates/musings/musings3.html
+++ b/app/templates/musings/musings3.html
@@ -7,18 +7,18 @@
         <div class="container" >
             <div class="row justify-content-center">
                 <div class="col-md-9 ">
-                    <h1 class="text-light">Alf’s Musings #3</h1>
+                    <h1 class="text-white">Alf’s Musings #3</h1>
                     <div class="user d-flex align-items-start justify-content-between bg-secondary p-4 rounded">
                         <div class="d-flex align-items-start">
                             <img src="./img/kajal.png" class="img-fluid rounded-circle" alt="">
                             <div class="d-block">
-                                <span class="d-block text-light">by <a class="h6">Alfonso Martínez</a></span>
+                                <span class="d-block text-white">by <a class="h6">Alfonso Martínez</a></span>
                                 <span class="d-block text-muted">23rd Dec 2021</span>
                             </div>
                         </div>
                     </div>
                     <!--//blog section-->
-                    <div class="blog-section text-light">
+                    <div class="blog-section text-white">
                         <h1 class="h2">Previously on <s><a href="https://frenetic.ai">Lost</a></s> Alf’s Musings</h1>
                         <p>In the previous number we commented how having windings that are not conducting the whole time can invalidate Dowell’s assumptions and how we should not use his method for topologies like Flyback or Forward. But we left a few details out of the discussion, especially regarding non-sinusoidal waveforms. Let 's discuss them.</p>
 
@@ -59,7 +59,7 @@
                         <p>This effect is especially accentuated in the case of Litz wire, where decreasing the strand diameter and adding more strands to the bundle not only increases the cost of the wire, but it can also increase the winding losses, as we are drastically increasing the number of proximity interactions between all the strands in the winding window.</p>
                         <img src="/static/images/musings/3/image5.png" class="img-fluid bounce-little my-3" alt="">
 
-                        <p class="p">Sadly originally published in https://drmolina.substack.com/p/6-power-electronic-problem-spreadsheets</p>
+                        <p class="p">Regretfully originally published in https://drmolina.substack.com/p/6-power-electronic-problem-spreadsheets</p>
                     </div>
                 </div>
             </div>
@@ -67,7 +67,8 @@
 
         <!-- FOOTER -->
         <footer class="container navbar fixed-bottom">
-            <p class="float-right"><a href="#">Back to top</a></p>
+            <p class="float-left"><a href="#">Back to top</a></p>
+            <p class="float-right"><a href="/musings">Back to menu</a></p>
         </footer>
     </main>
 {% endblock %}
