--- a/app/templates/musings/musings5.html
+++ b/app/templates/musings/musings5.html
@@ -7,18 +7,18 @@
         <div class="container" >
             <div class="row justify-content-center">
                 <div class="col-md-9 ">
-                    <h1 class="text-light">Alf’s Musings #5</h1>
+                    <h1 class="text-white">Alf’s Musings #5</h1>
                     <div class="user d-flex align-items-start justify-content-between bg-secondary p-4 rounded">
                         <div class="d-flex align-items-start">
                             <img src="./img/kajal.png" class="img-fluid rounded-circle" alt="">
                             <div class="d-block">
-                                <span class="d-block text-light">by <a class="h6">Alfonso Martínez</a></span>
+                                <span class="d-block text-white">by <a class="h6">Alfonso Martínez</a></span>
                                 <span class="d-block text-muted">29th Jul 2022</span>
                             </div>
                         </div>
                     </div>
                     <!--//blog section-->
-                    <div class="blog-section text-light">
+                    <div class="blog-section text-white">
                         <p>Over the years working within a Software product for Magnetics I have taken part in many meetings with Sales people. Mostly they were tedious, having to repeat the same Software demo to many a person, answering the <a href="https://en.wikipedia.org/wiki/Sisyphus">same</a> questions... those I don't wish upon anybody, but somebody has to do it. There were a few that were really interesting though, when a customer really got into <s>the mud</s> deep technical discussions and I learned more than I taught.</p>
                         <p>And every time a new sales guy or gal got into the company they sent him or her to me, so I could introduce myself and explain to them what the company was really doing. And this explanation always started with what a magnetic is. And many times to people who have no STEM education, which was never a problem.</p>
                         <p>That is the point where I am going to start, and that is the level I am going to assume. If you, dear reader, find yourself in an advanced point in either case, you can always skip this. Or read it <a href="https://static1.srcdn.com/wordpress/wp-content/uploads/2020/07/Harry-Potter-Umbridge.jpg">looking</a>  to correct me :)</p>
@@ -47,7 +47,8 @@
 
         <!-- FOOTER -->
         <footer class="container navbar fixed-bottom">
-            <p class="float-right"><a href="#">Back to top</a></p>
+            <p class="float-left"><a href="#">Back to top</a></p>
+            <p class="float-right"><a href="/musings">Back to menu</a></p>
         </footer>
     </main>
 {% endblock %}
