--- a/app/templates/musings.html
+++ b/app/templates/musings.html
@@ -3,88 +3,115 @@
 {% endblock %}
 
 {% block content %}
+
+<script type="module">
+    function listToMatrix(list, elementsPerSubArray) {
+        var matrix = [], i, k;
+
+        for (i = 0, k = -1; i < list.length; i++) {
+            if (i % elementsPerSubArray === 0) {
+                k++;
+                matrix[k] = [];
+            }
+
+            matrix[k].push(list[i]);
+        }
+
+        return matrix;
+    }
+    const { defineAsyncComponent } = Vue
+    const { createApp } = Vue
+
+    createApp({
+        components: {
+            Musing: defineAsyncComponent(() =>
+              import('./static/javascript/musing.js')
+            )
+        },
+        data() {
+            return {
+                number_columns: 2,
+                musings: [
+                    {
+                        id: 0, 
+                        link: '/musings1', 
+                        title: 'Alf\'s Musings 1', 
+                        section: 'Winding losses', 
+                        description: 'First chapter of the series based on analyzing Dowell\'s work on winding losses.', 
+                        date:'Dec 2021', 
+                        imgSrc: '/static/images/musings/1/image3.png', 
+                        imgAlt: 'Dowell\'s Curves'
+                    },
+                    {
+                        id: 1, 
+                        link: '/musings2', 
+                        title: 'Alf\'s Musings 2', 
+                        section: 'Winding losses', 
+                        description: 'Second chapter of the series based on analyzing Dowell\'s work on winding losses.', 
+                        date:'Dec 2021', 
+                        imgSrc: '/static/images/musings/2/image3.png', 
+                        imgAlt: 'Dowell\'s Curves'
+                    },
+                    {
+                        id: 2, 
+                        link: '/musings3', 
+                        title: 'Alf\'s Musings 3', 
+                        section: 'Winding losses', 
+                        description: 'Third and last chapter of the series based on analyzing Dowell\'s work on winding losses.', 
+                        date:'Dec 2021', 
+                        imgSrc: '/static/images/musings/3/image1.png', 
+                        imgAlt: 'Dowell\'s Curves'
+                    },
+                    {
+                        id: 3, 
+                        link: '/musings5', 
+                        title: 'Alf\'s Musings 5', 
+                        section: 'Magnetics for dummies', 
+                        description: 'First chapter of Magnetics for dummies, where we define what a Magnetic is.', 
+                        date:'Jul 2022', 
+                        imgSrc: '/static/images/musings/5/image5.png', 
+                        imgAlt: 'Dowell\'s Curves'
+                    }
+                ]
+            }
+        },
+        computed: {
+            musings_by_column() {
+              return listToMatrix(this.musings, this.number_columns);
+            }
+        }
+    }).mount('#musing-container')
+    </script>
+
+</script>
     <main role="main">
         <div class="container">
-            <div class="jumbotron p-3 p-md-5 text-white rounded bg-secondary">
+            <div class="jumbotron p-3 p-xl-5 text-white bg-light">
                 <div class="row mb-2">
-                    <div class="col-md-6 px-0">
-                        <strong class="d-inline-block mb-2 text-success">Core losses</strong>
-                        <h1 class="display-4">Alf's Musings 4</h1>
+                    <div class="col-xl-6 px-0">
+                        <strong class="d-inline-block mb-2 text-info">Core losses</strong>
+                        <h1 class="display-4"><a href="http://www.how2power.com/pdf_view.php?url=/newsletters/2209/H2PowerToday2209_FocusOnMagnetics.pdf" class=" text-white">Alf's Musings 4</a></h1>
                         <p class="lead my-3">Roshen’s Models Offer An Advanced Approach To Modeling Core Losses.</p>
                         <p class="lead mb-0"><a href="http://www.how2power.com/pdf_view.php?url=/newsletters/2209/H2PowerToday2209_FocusOnMagnetics.pdf">Read it!</a></p>
                     </div>
-                    <div class="col-md-6">
-                    <img class=" ml-2 card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 500px;" src="/static/images/musings/4/loops.gif">
+                    <div class="col-xl-6">
+                    <img class=" ml-2 card-img-right flex-auto d-none d-xl-block" alt="Dowell's Curves" style="width: 500px;" src="/static/images/musings/4/loops.gif">
                     </div>
                 </div>
             </div>
-
-            <div class="row mb-2">
-                <div class="col-md-6">
-                    <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                        <div class="card-body d-flex flex-column align-items-start">
-                            <strong class="d-inline-block mb-2 text-success">Winding losses</strong>
-                            <h3 class="mb-0">
-                                <a class="text-light" href="/musings1">Alf's Musings 1</a>
-                            </h3>
-                            <div class="mb-1 text-muted">Dec 2021</div>
-                            <p class="card-text mb-auto">First instance of the series based on analyzing Dowell's work on winding losses.</p>
-                            <a href="/musings1">Read it!</a>
-                        </div>
-                        <img class="card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 200px; height: 200px;" src="/static/images/musings/1/image3.png">
+            <div id="musing-container">
+                <template v-for="musings_row, row_index in musings_by_column">
+                    <div class="row mb-2">
+                        <musing v-for="item, index in musings_row"
+                                :key="item.id"
+                                v-bind="item"
+                        ></musing>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                        <div class="card-body d-flex flex-column align-items-start">
-                            <strong class="d-inline-block mb-2 text-success">Winding losses</strong>
-                            <h3 class="mb-0">
-                                <a class="text-light" href="/musings2">Alf's Musings 2</a>
-                            </h3>
-                            <div class="mb-1 text-muted">Dec 2021</div>
-                            <p class="card-text mb-auto">Second instance of the series based on analyzing Dowell's work on winding losses.</p>
-                            <a href="/musings2">Read it!</a>
-                        </div>
-                        <img class="card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 200px; height: 150px;" src="/static/images/musings/2/image3.png">
-                    </div>
-                </div>
-            </div>
-
-            <div class="row mb-2">
-                <div class="col-md-6">
-                    <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                        <div class="card-body d-flex flex-column align-items-start">
-                            <strong class="d-inline-block mb-2 text-success">Winding losses</strong>
-                            <h3 class="mb-0">
-                                <a class="text-light" href="/musings3">Alf's Musings 3</a>
-                            </h3>
-                            <div class="mb-1 text-muted">Dec 2021</div>
-                            <p class="card-text mb-auto">Third and last instance of the series based on analyzing Dowell's work on winding losses.</p>
-                            <a href="/musings3">Read it!</a>
-                        </div>
-                        <img class="card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 200px; height: 150px;" src="/static/images/musings/3/image1.png">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card flex-md-row mb-4 box-shadow h-md-250">
-                        <div class="card-body d-flex flex-column align-items-start">
-                            <strong class="d-inline-block mb-2 text-success">Magnetics for dummies</strong>
-                            <h3 class="mb-0">
-                                <a class="text-light" href="/musings5">Alf's Musings 5</a>
-                            </h3>
-                            <div class="mb-1 text-muted">Jul 2022</div>
-                            <p class="card-text mb-auto">First chapter of Magnetics for dummies, where we define what a Magnetic is.</p>
-                            <a href="/musings5">Read it!</a>
-                        </div>
-                        <img class="card-img-right flex-auto d-none d-md-block" alt="Dowell's Curves" style="width: 200px; height: 150px;" src="/static/images/musings/5/image5.png">
-                    </div>
-                </div>
+                </template>
             </div>
         </div>
     </main>
 {% endblock %}
-
-
 
 <style type="text/css" media="screen">
 
