Added color for done tasks

--- a/app/templates/roadmap.html
+++ b/app/templates/roadmap.html
@@ -153,7 +153,7 @@
                         title: 'Custom Effective Parameters',
                         section: 'Core losses', 
                         description: 'Implement the calculation of effective length, area, and volume, together with minimun area; for any commercial or custom shape.',
-                        state: 'Done August 2022'
+                        state: 'Done on August 2022'
                     },
                     {
                         id: 15, 
@@ -162,14 +162,14 @@
                         description: 'Define a structure that is able to describe any magnetic component without any ambiguity; including core, wires, winding structure, connectors, assembly, excitation, electromagnetic and thermal behavior',
                         imgSrc: '/static/images/roadmap/data_structure.png',
                         imgAlt: 'Magnetic Agnostic Structure example',
-                        state: 'Done August 2022'
+                        state: 'Done on August 2022'
                     },
                     {
                         id: 16, 
                         title: 'Custom shape 3D model',
                         section: 'Magnetic Design', 
                         description: 'Implement functionality to model, visualize and download in STEP format any Commercial Off-The-Shelf or Custom shape, ready to be used in Finite Element Simulation.',
-                        state: 'Done September 2022'
+                        state: 'Done on September 2022'
                     },
                     {
                         id: 17, 
