--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,26 +41,25 @@
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-light text-primary mb-2", id="header_wrapper">
-            <a href="/index">
-                <img src="/static/images/logo.png" width="40" height="auto" href="/index" class="d-inline-block align-top mr-2" alt="">
-            </a>
-            <a class="navbar-brand text-primary" href="/index" id="title">Open Magnetics</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-primary" href="/roadmap">Roadmap</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-primary" href="/musings">Alf's Musings</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav user_section">
-                </ul>
+        <nav class="navbar navbar-expand-lg bg-light navbar-dark text-primary mb-2" id="header_wrapper">
+            <div class="container-fluid">
+                <a href="/index">
+                    <img src="/static/images/logo.png" width="40" height="auto" href="/index" class="d-inline-block align-top mr-2" alt="">
+                </a>
+                <a class="navbar-brand text-primary" href="/index">Open Magnetics</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon navbar-primary"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-primary" href="/roadmap">Roadmap</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-primary" href="/musings">Alf's Musings</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <div id="body_wrapper">
