Remove wrong link

--- a/app/templates/roadmap.html
+++ b/app/templates/roadmap.html
@@ -217,7 +217,7 @@
         <div class="container-flex mx-2">
                 <div class="row mb-2">
                     <div class="col-xl-12 px-0">
-                        <h1 class="display-4 text-center"><a href="http://www.how2power.com/pdf_view.php?url=/newsletters/2209/H2PowerToday2209_FocusOnMagnetics.pdf" class=" text-secondary">Open Magnetics Roadmap</a></h1>
+                        <h1 class="display-4 text-center text-secondary">Open Magnetics Roadmap</h1>
                         <p class="lead my-3 text-center text-white ">Here is the roadmap for own Open Source tool. Users can vote their favorite features, affecting the order in whuch they are implemented</p>
                     </div>
                 </div>
