legal stuff added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,19 +20,10 @@
                 </div>
                 <div class="col-lg-1">
                 </div>
-            </div><!-- /.row -->
+            </div>
 
+        </div>
 
-
-        </div><!-- /.container -->
-
-
-        <!-- FOOTER -->
-        <footer class="container navbar fixed-bottom">
-            <p class="float-right"><a href="#">Back to top</a></p>
-            <p>© 2022-<?php echo date("Y"); ?> Open Magnetics</p>
-            <!-- <p>© 2022-<?php echo date("Y"); ?> Open Magnetics · <a href="#">Privacy</a> · <a href="#">Terms</a></p> -->
-        </footer>
     </main>
 {% endblock %}
 
