--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,10 +65,34 @@
         <div id="body_wrapper">
             {% block content %}{% endblock %}
         </div>
+
+        <div class="container-flex  footer ">
+            <footer class="py-3 my-4">
+                <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                    <li class="nav-item"><a href="/index" class="nav-link px-2 text-muted">Home</a></li>
+                    <li class="nav-item"><a href="/cookie_policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>
+                    <li class="nav-item"><a href="/legal_notice" class="nav-link px-2 text-muted">Legal</a></li>
+                </ul>
+                <p class="text-center text-muted">© 2022-<?php echo date("Y"); ?> Open Magnetics</p>
+            </footer>
+        </div>
     </body>
 
     {% block styles %}{% endblock %}
     <style type="text/css" media="screen">
+
+        html {
+          position: relative;
+          min-height: 100%;
+          padding-bottom:160px;
+        }
+        footer {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          height: 100px;
+        }
+
         @media (max-width: 340px) {
             #title {
                 display : none;
@@ -125,6 +149,8 @@
     </style>
 
     {% block scripts %}{% endblock %}
+
+
     <script type="text/javascript">
         $(document).ready(function() {
             $('[data-toggle="popover"]').popover();
